--- a/config/conda.config
+++ b/config/conda.config
@@ -1,6 +1,5 @@
 process {
-    withLabel: vocal        {   conda = "$projectDir/envs/vocal.yml"        }
+    withLabel: biopython    {   conda = "$projectDir/envs/biopython.yml"    }
     withLabel: psl          {   conda = "$projectDir/envs/psl.yml"          }
-    withLabel: annotation   {   conda = "$projectDir/envs/annotation.yml"   }
     withLabel: report       {   conda = "$projectDir/envs/report.yml"       }
 }
