--- a/nextflow.config
+++ b/nextflow.config
@@ -8,8 +8,8 @@
 
 manifest {
     name            = 'VirusWarn-SC2'
-    author          = """Kunaphas Kongkitimanon, Hugues Richard, Martin Hölzer, Stefan Frank"""
-    homePage        = 'https://github.com/rki-mf1/VirusWarn-SC2'
+    author          = """Kunaphas Kongkitimanon, Stefan Frank, Martin Hölzer, Hugues Richard"""
+    homePage        = 'https://github.com/rki-mf1/viruswarn-sc2'
     description     = """ A mutation-basted alert system to prioritize concerning SARS-CoV-2 variants from sequencing data """
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.10.1'
@@ -88,6 +88,10 @@ profiles {
             cacheDir = params.conda_cache_dir
         }
         includeConfig 'config/conda.config'
+    }
+    docker {
+        docker { enabled = true }
+        includeConfig 'config/container.config'
     }
 
     // no config for stub runs
