--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@
 
 manifest {
     name            = 'VirusWarn-SC2'
-    author          = """Kunaphas Kongkitimanon, Stefan Frank, Martin Hölzer, Hugues Richard"""
+    author          = """Kunaphas Kongkitimanon, Christina Kirschbaum, Stefan Frank, Martin Hölzer, Hugues Richard"""
     homePage        = 'https://github.com/rki-mf1/viruswarn-sc2'
     description     = """ A mutation-basted alert system to prioritize concerning SARS-CoV-2 variants from sequencing data """
     mainScript      = 'main.nf'
@@ -37,7 +37,7 @@ params {
     output = 'results'
     preprocess_dir = '00_preprocessing'
     vocal_dir = '01_vocal'
-    annot_dir = '02_mutations2function'
+    annot_dir = '02_annotation'
     report_dir = '03_report'
     runinfo_dir = 'X.Pipeline-Runinfo'
 
@@ -46,6 +46,7 @@ params {
 
     // location for engines' cache
     conda_cache_dir = 'conda'
+    singularity_cache_dir = 'singularity'
 
     cloudProcess = false
 }
@@ -91,6 +92,15 @@ profiles {
     }
     docker {
         docker { enabled = true }
+        includeConfig 'config/container.config'
+    }
+    singularity {
+        singularity { 
+                enabled = true
+                autoMounts = true
+                cacheDir = params.singularity_cache_dir
+                envWhitelist = "HTTPS_PROXY,HTTP_PROXY,http_proxy,https_proxy,FTP_PROXY,ftp_proxy"
+        }
         includeConfig 'config/container.config'
     }
 
