--- a/config/local.config
+++ b/config/local.config
@@ -1,7 +1,6 @@
 process {
     withLabel: preprocess   {   cpus = 1;               }
-    withLabel: vocal        {   cpus = 1;               }
+    withLabel: biopython    {   cpus = 1;               }
     withLabel: psl          {   cpus = params.cores;    }
-    withLabel: annotation   {   cpus = 1;               }
     withLabel: report       {   cpus = 2;               }
 }
