--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ manifest {
     description     = """ A mutation-basted alert system to prioritize concerning SARS-CoV-2 variants from sequencing data """
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.10.1'
-    version         = '1.0dev'
+    version         = 'v0.0.1'
     doi             = ''
 }
 
@@ -31,6 +31,7 @@ params {
     metadata = ''
     year = 2022
     psl = false
+    covsonar = false
     strict = false
 
     // output folder structure
