--- a/config/nodes.config
+++ b/config/nodes.config
@@ -1,7 +1,6 @@
 process {
     withLabel: preprocess   {   time = '2h' ; cpus = 1 ; memory = '2 GB'  }
-    withLabel: vocal        {   time = '2h' ; cpus = 1 ; memory = '2 GB'  }
+    withLabel: biopython    {   time = '2h' ; cpus = 1 ; memory = '2 GB'  }
     withLabel: psl          {   time = '4h' ; cpus = 8 ; memory = '10 GB' }
-    withLabel: annotation   {   time = '2h' ; cpus = 1 ; memory = '2 GB'  }
     withLabel: report       {   time = '2h' ; cpus = 2 ; memory = '5 GB'  }
 }
